Update Mockoon references to use Mockoon Playground and enhance examples for asynchronous methods in JavaScript

--- a/docs/content/p6.md
+++ b/docs/content/p6.md
@@ -1,4 +1,4 @@
-# Métodos Asíncronos y Fetch en JavaScript con Mockoon
+# Métodos Asíncronos y Fetch en JavaScript con Mockoon Playground
 
 ## Introducción
 
@@ -12,11 +12,11 @@ En este documento, exploraremos en detalle:
    - Promesas
    - Async/Await
 3. **La API `fetch`: cómo realizar solicitudes HTTP**
-4. **Uso de Mockoon para simular APIs**
-5. **Ejemplos prácticos completos con Mockoon**
+4. **Uso de Mockoon Playground para probar APIs**
+5. **Ejemplos prácticos completos con Mockoon Playground**
 6. **Buenas prácticas y manejo de errores**
 
-Además, se incluirán ejemplos específicos utilizando **Mockoon**, una herramienta que permite crear servidores API simulados para pruebas locales, ideal para desarrolladores que necesitan probar solicitudes HTTP sin depender de un servidor remoto.
+Los ejemplos utilizan el endpoint público de Mockoon Playground en `https://playground.mockoon.com/users`, que proporciona una API simulada para pruebas sin necesidad de configurar un servidor local.
 
 ---
 
@@ -53,7 +53,7 @@ function obtenerDatos(url, callback) {
   xhr.send();
 }
 
-obtenerDatos('http://localhost:3000/datos', function (error, datos) {
+obtenerDatos('https://playground.mockoon.com/users', function (error, datos) {
   if (error) {
     console.error('Error:', error.message);
     return;
@@ -106,7 +106,7 @@ La sintaxis **`async/await`** es una forma más moderna y legible de trabajar co
 ```javascript
 async function obtenerDatos() {
   try {
-    const respuesta = await fetch('http://localhost:3000/datos');
+    const respuesta = await fetch('https://playground.mockoon.com/users');
     if (!respuesta.ok) {
       throw new Error(`Error HTTP: ${respuesta.status}`);
     }
@@ -141,7 +141,7 @@ La API **`fetch`** es una interfaz moderna de JavaScript que permite realizar so
 ### Estructura básica de una solicitud con `fetch`
 
 ```javascript
-fetch('http://localhost:3000/datos')
+fetch('https://playground.mockoon.com/users')
   .then((respuesta) => {
     if (!respuesta.ok) {
       throw new Error(`Error HTTP: ${respuesta.status}`);
@@ -161,7 +161,7 @@ Con **async/await**, la misma solicitud se escribiría así:
 ```javascript
 async function obtenerDatos() {
   try {
-    const respuesta = await fetch('http://localhost:3000/datos');
+    const respuesta = await fetch('https://playground.mockoon.com/users');
     if (!respuesta.ok) {
       throw new Error(`Error HTTP: ${respuesta.status}`);
     }
@@ -177,129 +177,79 @@ obtenerDatos();
 
 ---
 
-## Uso de Mockoon para simular APIs
+## Uso de Mockoon Playground para probar APIs
 
-**Mockoon** es una herramienta de código abierto que permite crear servidores API simulados de manera local. Es ideal para pruebas durante el desarrollo, ya que no requiere una conexión a internet ni un servidor remoto real. Con Mockoon, puedes definir endpoints, respuestas, códigos de estado, retardos, y más, todo desde una interfaz gráfica o archivos de configuración JSON.
+**Mockoon Playground** es un servicio en línea proporcionado por Mockoon que ofrece endpoints API simulados para pruebas rápidas. El endpoint `https://playground.mockoon.com/users` devuelve una lista de usuarios en formato JSON, ideal para probar solicitudes HTTP sin necesidad de configurar un servidor local.
 
-### Configuración básica de Mockoon
+### Características del endpoint `https://playground.mockoon.com/users`
 
-1. **Descarga e instalación**:
-   - Descarga Mockoon desde su sitio oficial: [https://mockoon.com/](https://mockoon.com/).
-   - Instala la aplicación en tu sistema operativo (disponible para Windows, macOS y Linux).
-
-2. **Crear un servidor simulado**:
-   - Abre Mockoon y crea un nuevo entorno.
-   - Define un puerto (por ejemplo, `3000`).
-   - Agrega un endpoint, como `GET /datos`, con una respuesta JSON predefinida, por ejemplo:
-     ```json
-     [
-       { "id": 1, "nombre": "Juan Pérez", "email": "juan@example.com" },
-       { "id": 2, "nombre": "María Gómez", "email": "maria@example.com" }
-     ]
-     ```
-   - Guarda la configuración y inicia el servidor.
-
-3. **Probar el endpoint**:
-   - Usa una herramienta como `curl`, Postman, o un navegador para verificar que el endpoint `http://localhost:3000/datos` devuelve la respuesta esperada.
-
-### Configuración de Mockoon para los ejemplos
-
-Para los ejemplos a continuación, asumimos que has configurado Mockoon con los siguientes endpoints:
-
-- **GET /datos**: Devuelve una lista de usuarios en formato JSON.
-- **POST /usuarios**: Acepta un objeto JSON con datos de un usuario y devuelve el usuario creado con un ID asignado.
-- **GET /error**: Devuelve un error 500 para simular un fallo del servidor.
-
-El archivo de configuración de Mockoon (exportado como JSON) podría verse así:
-
-```json
-{
-  "port": 3000,
-  "routes": [
-    {
-      "method": "GET",
-      "path": "/datos",
-      "response": {
-        "status": 200,
-        "body": "[{\"id\":1,\"nombre\":\"Juan Pérez\",\"email\":\"juan@example.com\"},{\"id\":2,\"nombre\":\"María Gómez\",\"email\":\"maria@example.com\"}]"
-      }
-    },
-    {
-      "method": "POST",
-      "path": "/usuarios",
-      "response": {
-        "status": 201,
-        "body": "{\"id\":{{body.id || 999}},\"nombre\":\"{{body.nombre}}\",\"email\":\"{{body.email}}\"}"
-      }
-    },
-    {
-      "method": "GET",
-      "path": "/error",
-      "response": {
-        "status": 500,
-        "body": "{\"error\":\"Error interno del servidor\"}"
-      }
-    }
+- **Método**: GET
+- **Respuesta**: Lista de usuarios en formato JSON, por ejemplo:
+  ```json
+  [
+    { "id": 1, "name": "John Doe", "email": "john.doe@example.com" },
+    { "id": 2, "name": "Jane Smith", "email": "jane.smith@example.com" }
   ]
-}
-```
+  ```
+- **Limitaciones**: El playground es de solo lectura (soporta principalmente GET). Solicitudes como POST o PUT no están habilitadas en este endpoint público.
 
-Guarda este archivo (por ejemplo, `mockoon-config.json`) e impórtalo en Mockoon para iniciar el servidor en `http://localhost:3000`.
+Debido a las limitaciones del playground, los ejemplos se centrarán en solicitudes GET y simularán escenarios de error (como tiempos de espera o fallos de red) en lugar de POST, ya que el endpoint no soporta escritura.
 
 ---
 
-## Ejemplos prácticos completos con Mockoon
+## Ejemplos prácticos completos con Mockoon Playground
 
-A continuación, presento ejemplos que utilizan `fetch` para interactuar con los endpoints simulados en Mockoon, combinando promesas, async/await y manejo de errores.
+A continuación, presento ejemplos que utilizan `fetch` para interactuar con el endpoint `https://playground.mockoon.com/users`, combinando promesas, async/await y manejo de errores.
 
-### Ejemplo 1: Solicitud GET con Mockoon
+### Ejemplo 1: Solicitud GET con Mockoon Playground
 
-Este ejemplo obtiene la lista de usuarios desde el endpoint `GET /datos` de Mockoon.
+Este ejemplo obtiene la lista de usuarios desde el endpoint `GET https://playground.mockoon.com/users`.
 
 ```javascript
-async function obtenerUsuariosMockoon() {
+async function obtenerUsuariosPlayground() {
   try {
-    const respuesta = await fetch('http://localhost:3000/datos');
+    const respuesta = await fetch('https://playground.mockoon.com/users');
     if (!respuesta.ok) {
       throw new Error(`Error HTTP: ${respuesta.status}`);
     }
     const usuarios = await respuesta.json();
-    console.log('Usuarios obtenidos desde Mockoon:', usuarios);
+    console.log('Usuarios obtenidos desde Mockoon Playground:', usuarios);
   } catch (error) {
     console.error('Error al obtener usuarios:', error.message);
   }
 }
 
-obtenerUsuariosMockoon();
+obtenerUsuariosPlayground();
 ```
 
 **Explicación**:
-- La solicitud se realiza al endpoint `http://localhost:3000/datos` configurado en Mockoon.
+- La solicitud se realiza al endpoint `https://playground.mockoon.com/users`.
 - Se verifica si la respuesta es exitosa con `respuesta.ok`.
 - Los datos JSON se procesan y se imprimen en la consola.
-- Si el servidor Mockoon no está corriendo, se captura un error de red.
+- Si hay un error de red (por ejemplo, falta de conexión), se captura en el bloque `catch`.
 
-**Salida esperada**:
+**Salida esperada** (puede variar según el estado del playground):
 ```javascript
-Usuarios obtenidos desde Mockoon: [
-  { id: 1, nombre: 'Juan Pérez', email: 'juan@example.com' },
-  { id: 2, nombre: 'María Gómez', email: 'maria@example.com' }
+Usuarios obtenidos desde Mockoon Playground: [
+  { id: 1, name: 'John Doe', email: 'john.doe@example.com' },
+  { id: 2, name: 'Jane Smith', email: 'jane.smith@example.com' }
 ]
 ```
 
-### Ejemplo 2: Solicitud POST con Mockoon
+### Ejemplo 2: Simulación de solicitud POST (nota aclaratoria)
 
-Este ejemplo envía una solicitud POST al endpoint `POST /usuarios` para crear un nuevo usuario.
+Dado que el endpoint `https://playground.mockoon.com/users` no soporta solicitudes POST, este ejemplo muestra cómo se escribiría el código si el endpoint lo permitiera, junto con una nota aclaratoria.
 
 ```javascript
-async function crearUsuarioMockoon() {
+async function crearUsuarioPlayground() {
+  console.warn('Nota: El endpoint https://playground.mockoon.com/users no soporta POST. Este es un ejemplo ilustrativo.');
   try {
     const nuevoUsuario = {
-      nombre: 'Ana López',
-      email: 'ana@example.com',
+      name: 'Ana López',
+      email: 'ana.lopez@example.com',
     };
 
-    const respuesta = await fetch('http://localhost:3000/usuarios', {
+    const respuesta = await fetch('https://playground.mockoon.com/users', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
@@ -312,71 +262,96 @@ async function crearUsuarioMockoon() {
     }
 
     const usuarioCreado = await respuesta.json();
-    console.log('Usuario creado en Mockoon:', usuarioCreado);
+    console.log('Usuario creado en Mockoon Playground:', usuarioCreado);
   } catch (error) {
     console.error('Error al crear usuario:', error.message);
   }
 }
 
-crearUsuarioMockoon();
+crearUsuarioPlayground();
 ```
 
 **Explicación**:
-- Se envía un objeto JSON con los datos del usuario al endpoint `POST /usuarios`.
-- Mockoon responde con el mismo objeto, añadiendo un campo `id` (según la configuración).
-- La respuesta se procesa y se imprime en la consola.
+- Este código intenta enviar una solicitud POST, pero el endpoint del playground devolverá un error (por ejemplo, 405 Method Not Allowed).
+- La advertencia inicial aclara que el endpoint no soporta POST, y el ejemplo sirve como referencia para casos donde se use un endpoint que sí lo permita.
+- Para probar solicitudes POST reales, se recomienda configurar un servidor Mockoon local o usar otra API que soporte escritura.
 
 **Salida esperada**:
 ```javascript
-Usuario creado en Mockoon: {
-  id: 999,
-  nombre: 'Ana López',
-  email: 'ana@example.com'
-}
+Nota: El endpoint https://playground.mockoon.com/users no soporta POST. Este es un ejemplo ilustrativo.
+Error al crear usuario: Error HTTP: 405
 ```
 
-### Ejemplo 3: Manejo de errores con Mockoon
+### Ejemplo 3: Manejo de errores con tiempo de espera
 
-Este ejemplo realiza una solicitud al endpoint `GET /error` que devuelve un error 500.
+Este ejemplo implementa un tiempo de espera para la solicitud GET, simulando un escenario donde la respuesta del servidor es demasiado lenta.
 
 ```javascript
-async function probarErrorMockoon() {
+async function fetchConTimeout(url, opciones, timeout = 5000) {
+  const controller = new AbortController();
+  const id = setTimeout(() => controller.abort(), timeout);
+
   try {
-    const respuesta = await fetch('http://localhost:3000/error');
+    const respuesta = await fetch(url, {
+      ...opciones,
+      signal: controller.signal,
+    });
+    clearTimeout(id);
     if (!respuesta.ok) {
-      const errorData = await respuesta.json();
-      throw new Error(`Error HTTP ${respuesta.status}: ${errorData.error}`);
+      throw new Error(`Error HTTP: ${respuesta.status}`);
     }
-    const datos = await respuesta.json();
-    console.log('Datos:', datos);
+    return respuesta;
   } catch (error) {
-    console.error('Error capturado:', error.message);
+    clearTimeout(id);
+    throw error;
   }
 }
 
-probarErrorMockoon();
+async function obtenerUsuariosConTimeout() {
+  try {
+    const respuesta = await fetchConTimeout('https://playground.mockoon.com/users', {}, 3000);
+    const usuarios = await respuesta.json();
+    console.log('Usuarios obtenidos:', usuarios);
+  } catch (error) {
+    if (error.name === 'AbortError') {
+      console.error('Error: La solicitud excedió el tiempo límite de 3 segundos');
+    } else {
+      console.error('Error:', error.message);
+    }
+  }
+}
+
+obtenerUsuariosConTimeout();
 ```
 
 **Explicación**:
-- La solicitud se realiza al endpoint `GET /error`, que está configurado para devolver un error 500.
-- Se verifica `respuesta.ok` y, al ser `false`, se lanza un error con el mensaje proporcionado por Mockoon.
-- El bloque `catch` captura y muestra el error.
+- La función `fetchConTimeout` agrega un tiempo de espera a la solicitud usando `AbortController`.
+- Si la solicitud tarda más de 3 segundos, se lanza un `AbortError`.
+- Este ejemplo es útil para manejar APIs externas como el Mockoon Playground, donde los tiempos de respuesta pueden variar.
 
-**Salida esperada**:
+**Salida esperada** (si la solicitud es rápida):
 ```javascript
-Error capturado: Error HTTP 500: Error interno del servidor
+Usuarios obtenidos: [
+  { id: 1, name: 'John Doe', email: 'john.doe@example.com' },
+  { id: 2, name: 'Jane Smith', email: 'jane.smith@example.com' }
+]
 ```
 
-### Ejemplo 4: Aplicación web simple con Mockoon
+**Salida esperada** (si la solicitud excede el tiempo):
+```javascript
+Error: La solicitud excedió el tiempo límite de 3 segundos
+```
 
-Este ejemplo crea una página web que usa `fetch` para interactuar con los endpoints de Mockoon y muestra los resultados en el DOM.
+### Ejemplo 4: Aplicación web simple con Mockoon Playground
+
+Este ejemplo crea una página web que usa `fetch` para obtener usuarios desde `https://playground.mockoon.com/users` y muestra los resultados en el DOM.
 
 ```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Interfaz con Mockoon</title>
+  <title>Interfaz con Mockoon Playground</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     #resultado { margin-top: 20px; }
@@ -384,41 +359,19 @@ Este ejemplo crea una página web que usa `fetch` para interactuar con los endpo
   </style>
 </head>
 <body>
-  <h1>Interfaz con Mockoon</h1>
+  <h1>Interfaz con Mockoon Playground</h1>
   <button onclick="obtenerUsuarios()">Obtener Usuarios</button>
-  <button onclick="crearUsuario()">Crear Usuario</button>
   <div id="resultado"></div>
 
   <script>
     async function obtenerUsuarios() {
       try {
-        const respuesta = await fetch('http://localhost:3000/datos');
+        const respuesta = await fetch('https://playground.mockoon.com/users');
         if (!respuesta.ok) {
           throw new Error(`Error HTTP: ${respuesta.status}`);
         }
         const usuarios = await respuesta.json();
         mostrarResultado('Usuarios:', usuarios);
-      } catch (error) {
-        mostrarResultado('Error:', error.message);
-      }
-    }
-
-    async function crearUsuario() {
-      try {
-        const nuevoUsuario = {
-          nombre: 'Usuario Nuevo',
-          email: 'nuevo@example.com',
-        };
-        const respuesta = await fetch('http://localhost:3000/usuarios', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(nuevoUsuario),
-        });
-        if (!respuesta.ok) {
-          throw new Error(`Error HTTP: ${respuesta.status}`);
-        }
-        const usuarioCreado = await respuesta.json();
-        mostrarResultado('Usuario creado:', usuarioCreado);
       } catch (error) {
         mostrarResultado('Error:', error.message);
       }
@@ -434,79 +387,14 @@ Este ejemplo crea una página web que usa `fetch` para interactuar con los endpo
 ```
 
 **Explicación**:
-- Se crea una página HTML con dos botones: uno para obtener usuarios (`GET /datos`) y otro para crear un usuario (`POST /usuarios`).
-- Las funciones `obtenerUsuarios` y `crearUsuario` usan `fetch` con async/await para interactuar con los endpoints de Mockoon.
+- Se crea una página HTML con un botón para obtener usuarios desde `https://playground.mockoon.com/users`.
+- La función `obtenerUsuarios` usa `fetch` con async/await para realizar la solicitud.
 - Los resultados o errores se muestran en el DOM usando la función `mostrarResultado`.
-- El servidor Mockoon debe estar corriendo en `http://localhost:3000` para que las solicitudes funcionen.
+- No se incluye un botón para POST debido a las limitaciones del endpoint.
 
 **Instrucciones**:
 1. Guarda el código en un archivo `index.html`.
-2. Asegúrate de que Mockoon esté ejecutando el servidor con los endpoints configurados.
-3. Abre `index.html` en un navegador y haz clic en los botones para probar las solicitudes.
-
----
-
-## Buenas prácticas y manejo de errores
-
-1. **Siempre verifica `response.ok`**:
-   - Comprueba si la respuesta HTTP es exitosa antes de procesarla.
-   - Ejemplo: `if (!respuesta.ok) { throw new Error('Error HTTP') }`.
-
-2. **Maneja errores con `try/catch`**:
-   - Usa bloques `try/catch` con `async/await` para capturar errores de red o de la API.
-
-3. **Configura headers adecuadamente**:
-   - Incluye headers como `Content-Type` o `Authorization` cuando sea necesario.
-
-4. **Usa `Promise.all` para solicitudes paralelas**:
-   - Mejora el rendimiento ejecutando múltiples solicitudes simultáneamente.
-
-5. **Implementa reintentos para errores transitorios**:
-   - Si una solicitud falla por un problema de red, considera reintentarla un número limitado de veces.
-
-6. **Valida los datos antes de enviarlos**:
-   - Asegúrate de que los datos enviados en solicitudes POST/PUT estén en el formato correcto.
-
-7. **Usa un tiempo de espera (timeout)**:
-   - Configura un tiempo máximo para las solicitudes para evitar que se cuelguen indefinidamente.
-
-8. **Pruebas con Mockoon**:
-   - Usa Mockoon para simular diferentes escenarios (éxito, errores, retardos) y probar cómo tu aplicación maneja cada caso.
-   - Configura respuestas dinámicas en Mockoon para simular datos realistas o errores específicos.
-
-```javascript
-async function fetchConTimeout(url, opciones, timeout = 5000) {
-  const controller = new AbortController();
-  const id = setTimeout(() => controller.abort(), timeout);
-
-  try {
-    const respuesta = await fetch(url, {
-      ...opciones,
-      signal: controller.signal,
-    });
-    clearTimeout(id);
-    return respuesta;
-  } catch (error) {
-    clearTimeout(id);
-    throw error;
-  }
-}
-
-async function ejemploTimeoutMockoon() {
-  try {
-    const respuesta = await fetchConTimeout('http://localhost:3000/datos', {}, 3000);
-    const datos = await respuesta.json();
-    console.log('Datos:', datos);
-  } catch (error) {
-    if (error.name === 'AbortError') {
-      console.error('La solicitud excedió el tiempo límite');
-    } else {
-      console.error('Error:', error.message);
-    }
-  }
-}
-
-ejemploTimeoutMockoon();
-```
+2. Abre `index.html` en un navegador (puedes usar un servidor local como `Live Server` en VS Code para evitar problemas de CORS, aunque el endpoint de Mockoon Playground suele incluir headers CORS permisivos).
+3. Haz clic en el botón para ver la lista de usuarios.
 
 ---
