Add activity for consuming movie API with Mockoon Playground, including instructions for GET, POST, and PUT requests

--- a/docs/content/p6.md
+++ b/docs/content/p6.md
@@ -405,3 +405,281 @@ Este ejemplo crea una página web que usa `fetch` para obtener usuarios desde `h
 3. Haz clic en el botón para ver la lista de usuarios.
 
 ---
+## Actividad: Consumo de la API de Películas con Mockoon Playground (POST y PUT habilitados)
+
+## Introducción
+
+En esta actividad, practicarás el uso de métodos asíncronos en JavaScript, específicamente la API **`fetch`** y la sintaxis **`async/await`**, para interactuar con el endpoint público de Mockoon Playground en `https://playground.mockoon.com/movies`. Este endpoint devuelve una lista de películas en formato JSON y soporta solicitudes GET, POST y PUT, lo que permite realizar operaciones de lectura, creación y actualización de películas.
+
+La actividad está diseñada para reforzar tus habilidades en:
+
+- Realizar solicitudes HTTP (GET, POST, PUT) usando `fetch`.
+- Manejar respuestas asíncronas con `async/await`.
+- Procesar datos JSON y mostrarlos en una interfaz web.
+- Implementar manejo de errores para escenarios como fallos de red o respuestas no exitosas.
+
+## Objetivos
+
+1. Realizar una solicitud GET al endpoint `https://playground.mockoon.com/movies` para obtener una lista de películas.
+2. Crear una nueva película usando una solicitud POST con un objeto JSON proporcionado.
+3. Actualizar una película existente usando una solicitud PUT.
+4. Crear una página web que muestre la lista de películas en una tabla HTML y permita crear o actualizar películas.
+5. Implementar manejo de errores para mostrar mensajes al usuario en caso de fallos.
+
+## Requisitos previos
+
+- Conocimientos básicos de HTML, CSS y JavaScript.
+- Comprensión de promesas y `async/await` en JavaScript.
+- Un navegador web moderno (como Chrome o Firefox).
+- Un editor de código (como VS Code) y, opcionalmente, una extensión como Live Server para servir la página HTML localmente.
+
+## Descripción del endpoint
+
+El endpoint `https://playground.mockoon.com/movies` es un servicio público de Mockoon Playground que simula una API de películas. Sus características son:
+
+- **Método GET**:
+    - **URL**: `https://playground.mockoon.com/movies`
+    - **Respuesta**: Un arreglo de objetos JSON con información de películas, por ejemplo:
+      ```json
+      [
+        {
+          "id": 1,
+          "title": "The Shawshank Redemption",
+          "year": 1994,
+          "director": "Frank Darabont",
+          "genre": "Drama",
+          "rating": 9.3,
+          "isPopular": true
+        },
+        {
+          "id": 2,
+          "title": "The Godfather",
+          "year": 1972,
+          "director": "Francis Ford Coppola",
+          "genre": "Crime",
+          "rating": 9.2,
+          "isPopular": true
+        }
+      ]
+      ```
+
+- **Método POST**:
+  
+    - **URL**: `https://playground.mockoon.com/movies`
+    - **Cuerpo**: Objeto JSON con los campos `title`, `year`, `director`, `genre`, `rating`, `isPopular`.
+    - **Respuesta**: Devuelve el objeto creado con un `id` asignado por la API.
+
+- **Método PUT**:
+  
+    - **URL**: `https://playground.mockoon.com/movies/:id` (por ejemplo, `https://playground.mockoon.com/movies/1`)
+    - **Cuerpo**: Objeto JSON con los campos a actualizar.
+    - **Respuesta**: Devuelve el objeto actualizado.
+
+- **Notas**: El endpoint es público y soporta CORS, por lo que no requiere configuración adicional para pruebas desde un navegador.
+
+## Instrucciones
+
+Sigue estos pasos para completar la actividad:
+
+1. **Crea la estructura HTML**:
+   
+      - Crea un archivo `index.html` con una interfaz que incluya:
+        - Un botón para cargar la lista de películas (GET).
+        - Un formulario para crear una nueva película (POST).
+        - Un formulario para actualizar una película existente (PUT).
+        - Una tabla para mostrar las películas.
+        - Un área para mostrar mensajes de error.
+      - Añade estilos CSS para que la interfaz sea clara y legible.
+
+2. **Implementa la lógica JavaScript**:
+   
+      - Escribe funciones asíncronas para:
+        - Obtener la lista de películas (`GET`).
+        - Crear una nueva película (`POST`) usando el objeto JSON corregido.
+        - Actualizar una película existente (`PUT`).
+      - Usa `fetch` con `async/await` y maneja errores con `try/catch`.
+      - Actualiza dinámicamente la tabla con los resultados.
+
+3. **Prueba la aplicación**:
+   
+      - Abre `index.html` en un navegador (usa un servidor local si es necesario).
+      - Prueba cargar las películas, crear una nueva película y actualizar una existente.
+      - Simula errores (por ejemplo, enviando un ID inválido en PUT) para verificar el manejo de errores.
+
+
+## Plantilla inicial
+
+Aquí tienes una plantilla inicial para `index.html`:
+
+```html
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Solución: Gestión de Películas</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+    h1, h2 {
+      color: #333;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 10px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
+      cursor: pointer;
+    }
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+    #error, #exito {
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 5px;
+    }
+    #error {
+      color: red;
+      background-color: #ffe6e6;
+    }
+    #exito {
+      color: green;
+      background-color: #e6ffe6;
+    }
+    #loading {
+      color: #007bff;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    button, input[type="submit"] {
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin: 5px;
+    }
+    button:hover, input[type="submit"]:hover {
+      background-color: #0056b3;
+    }
+    form {
+      margin: 20px 0;
+      padding: 15px;
+      background-color: #f8f8f8;
+      border-radius: 5px;
+    }
+    label {
+      display: block;
+      margin: 8px 0;
+    }
+    input[type="text"], input[type="number"] {
+      padding: 8px;
+      width: 100%;
+      max-width: 300px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+    input[type="checkbox"] {
+      margin-left: 10px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Gestión de Películas</h1>
+  <button onclick="cargarPeliculas()">Cargar Películas</button>
+  <div id="loading" style="display: none;">Cargando...</div>
+
+  <h2>Crear Nueva Película</h2>
+  <form id="form-crear" onsubmit="event.preventDefault(); crearPelicula();">
+    <label>Título: <input type="text" id="crear-titulo" required></label>
+    <label>Género: <input type="text" id="crear-genero" required></label>
+    <label>Director: <input type="text" id="crear-director" required></label>
+    <label>Año: <input type="number" id="crear-anio" min="1888" max="2025" required></label>
+    <label>Calificación: <input type="number" id="crear-rating" step="0.1" min="0" max="10" required></label>
+    <label>Popular: <input type="checkbox" id="crear-popular"></label>
+    <input type="submit" value="Crear Película">
+  </form>
+
+  <h2>Actualizar Película</h2>
+  <form id="form-actualizar" onsubmit="event.preventDefault(); actualizarPelicula();">
+    <label>ID: <input type="text" id="actualizar-id" required></label>
+    <label>Título: <input type="text" id="actualizar-titulo" required></label>
+    <label>Género: <input type="text" id="actualizar-genero" required></label>
+    <label>Director: <input type="text" id="actualizar-director" required></label>
+    <label>Año: <input type="number" id="actualizar-anio" min="1888" max="2025" required></label>
+    <label>Calificación: <input type="number" id="actualizar-rating" step="0.1" min="0" max="10" required></label>
+    <label>Popular: <input type="checkbox" id="actualizar-popular"></label>
+    <input type="submit" value="Actualizar Película">
+  </form>
+
+  <table id="tabla-peliculas">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Título</th>
+        <th>Género</th>
+        <th>Director</th>
+        <th>Año</th>
+        <th>Calificación</th>
+        <th>Popular</th>
+      </tr>
+    </thead>
+    <tbody id="cuerpo-tabla"></tbody>
+  </table>
+  <div id="exito"></div>
+  <div id="error"></div>
+
+  <script>
+   
+
+    // Cargar películas (GET)
+    async function cargarPeliculas() {
+      
+    }
+
+    // Crear película (POST)
+    async function crearPelicula() {
+      
+    }
+
+    // Actualizar película (PUT)
+    async function actualizarPelicula() {
+      
+    }
+  </script>
+</body>
+</html>
+```
+
+## Tareas a completar
+
+1. **Implementa la función `cargarPeliculas`**:
+   
+      - Usa `fetch` con `async/await` para obtener las películas de `https://playground.mockoon.com/movies`.
+      - Verifica que la respuesta sea exitosa (`response.ok`).
+      - Rellena la tabla con los datos obtenidos.
+
+2. **Implementa la función `crearPelicula`**:
+   
+      - Obtén los datos del formulario de creación.
+      - Envía una solicitud POST con el objeto JSON corregido.
+      - Actualiza la tabla con la nueva película.
+
+3. **Implementa la función `actualizarPelicula`**:
+   
+      - Obtén los datos del formulario de actualización, incluyendo el ID.
+      - Envía una solicitud PUT al endpoint `https://playground.mockoon.com/movies/:id`.
+      - Actualiza la tabla con los datos modificados.
+
