Add exercises for Fetch and Async/Await with practical examples in HTML

--- a/docs/content/p6.md
+++ b/docs/content/p6.md
@@ -404,6 +404,119 @@ Este ejemplo crea una página web que usa `fetch` para obtener usuarios desde `h
 2. Abre `index.html` en un navegador (puedes usar un servidor local como `Live Server` en VS Code para evitar problemas de CORS, aunque el endpoint de Mockoon Playground suele incluir headers CORS permisivos).
 3. Haz clic en el botón para ver la lista de usuarios.
 
+## Ejercicios Fetch y Tabla con Async/Await
+
+## Modelo de Datos
+```json
+[
+  {
+    "id": 1,
+    "name": "string",
+    "email": "string@domain.com",
+    "age": 30
+  }
+]
+```
+
+## Ejercicio 1: Cargar usuarios básicos
+```html
+<table id="table1"></table>
+<script>
+async function loadUsers1() {
+  try {
+    const res = await fetch('https://api.example.com/users');
+    const data = await res.json();
+    const table = document.getElementById('table1');
+    table.innerHTML = '<tr><th>ID</th><th>Name</th></tr>' +
+      data.map(user => `<tr><td>${user.id}</td><td>${user.name}</td></tr>`).join('');
+  } catch (err) {
+    console.error(err);
+  }
+}
+loadUsers1();
+</script>
+```
+
+## Ejercicio 2: Mostrar email y edad
+```html
+<table id="table2"></table>
+<script>
+async function loadUsers2() {
+  try {
+    const res = await fetch('https://api.example.com/users');
+    const data = await res.json();
+    const table = document.getElementById('table2');
+    table.innerHTML = '<tr><th>Email</th><th>Age</th></tr>' +
+      data.map(user => `<tr><td>${user.email}</td><td>${user.age}</td></tr>`).join('');
+  } catch (err) {
+    console.error(err);
+  }
+}
+loadUsers2();
+</script>
+```
+
+## Ejercicio 3: Filtrar mayores de 25
+```html
+<table id="table3"></table>
+<script>
+async function loadUsers3() {
+  try {
+    const res = await fetch('https://api.example.com/users');
+    const data = await res.json();
+    const table = document.getElementById('table3');
+    table.innerHTML = '<tr><th>Name</th><th>Age</th></tr>' +
+      data
+        .filter(user => user.age > 25)
+        .map(user => `<tr><td>${user.name}</td><td>${user.age}</td></tr>`).join('');
+  } catch (err) {
+    console.error(err);
+  }
+}
+loadUsers3();
+</script>
+```
+
+## Ejercicio 4: Ordenar por nombre
+```html
+<table id="table4"></table>
+<script>
+async function loadUsers4() {
+  try {
+    const res = await fetch('https://api.example.com/users');
+    const data = await res.json();
+    const table = document.getElementById('table4');
+    table.innerHTML = '<tr><th>ID</th><th>Name</th></tr>' +
+      data
+        .sort((a, b) => a.name.localeCompare(b.name))
+        .map(user => `<tr><td>${user.id}</td><td>${user.name}</td></tr>`).join('');
+  } catch (err) {
+    console.error(err);
+  }
+}
+loadUsers4();
+</script>
+```
+
+## Ejercicio 5: Manejo de errores
+```html
+<table id="table5"></table>
+<script>
+async function loadUsers5() {
+  try {
+    const res = await fetch('https://api.example.com/users');
+    const data = await res.json();
+    const table = document.getElementById('table5');
+    table.innerHTML = '<tr><th>Name</th><th>Email</th></tr>' +
+      data.map(user => `<tr><td>${user.name}</td><td>${user.email}</td></tr>`).join('');
+  } catch (err) {
+    document.getElementById('table5').innerHTML = '<tr><td>Error loading data</td></tr>';
+  }
+}
+loadUsers5();
+</script>
+```
+
 ---
 ## Actividad: Consumo de la API de Películas con Mockoon Playground (POST y PUT habilitados)
 
